# cv-aas

./: .dockerignore  .env.example  .envrc  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  common.dhall  deploy.sh  english.dhall  english.json  norwegian.dhall  norwegian.json  preamble.tex  resume.dhall  update.sh
.github/workflows/: pipeline.yml
data/: english.json  english.pdf.REMOVED.git-id  norwegian.json  norwegian.pdf.REMOVED.git-id  template.cls
dhall/: Education.dhall  Me.dhall  Social.dhall  package.dhall
dhall/content/: common.dhall  english.dhall  norwegian.dhall  resume.dhall
dhall/types/: Degree.dhall  Education.dhall  Experience.dhall  Me.dhall  Project.dhall  Social.dhall  SocialKind.dhall  SocialMedia.dhall  Volunteer.dhall
scripts/: deploy.sh  dhall.sh  latex.sh  update.sh
src/: errors.rs  graphiql.rs  graphql.rs  lib.rs  main.rs  models.rs
static/: index.html
