[package]
authors = ["Sondre Aasemoen <nilsen.sondre@gmail.com>"]
edition = "2021"
name = "cv-aas"
version = "0.8.2"

[dependencies]
async-graphql = "3.0.28"
async-graphql-axum = "3.0.28"
axum = "0.4.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
thiserror = "1.0.30"
tokio = { version = "1.16.1", features = ["full"] }
tower = { version = "0.4.11", features = ["util", "timeout"] }
tower-http = { version = "0.2.1", features = ["full"] }
tracing = "0.1.30"
tracing-subscriber = "0.3.7"
