[package]
authors = ["Sondre Aasemoen <nilsen.sondre@gmail.com>"]
edition = "2021"
name = "cv-aas"
version = "0.9.0"

[dependencies]
async-graphql = "3.0.38"
async-graphql-axum = "3.0.38"
axum = "0.5.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
tower = { version = "0.4.12", features = ["util", "timeout"] }
tower-http = { version = "0.2.5", features = ["full"] }
tracing = "0.1.33"
tracing-subscriber = "0.3.11"
