[package]
authors = ["Sondre Aasemoen <nilsen.sondre@gmail.com>"]
edition = "2021"
name = "cv-aas"
version = "0.10.2"

[dependencies]
async-graphql = "5.0.5"
async-graphql-axum = "5.0.5"
axum = "0.6.4"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0.31"
tokio = { version = "1.20.1", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.3.4", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
